config.OpenVZ: enable CONFIG_LOCALVERSION_AUTO
It's convenient to have some reference point in the kernel version,
what git commit it refers to, so

+CONFIG_LOCALVERSION_AUTO=y

Note: kernel configs used during rpm packages creation do not have this option
enabled. So this is the first pecularity of configs committed to the kernel
tree for development convenience.

https://jira.sw.ru/browse/PSBM-34957

Signed-off-by: Konstantin Khorenko <khorenko@virtuozzo.com>
Acked-by: Cyrill Gorcunov <gorcunov@openvz.org>

--- a/configs/kernel-3.10.0-x86_64-debug.config
+++ b/configs/kernel-3.10.0-x86_64-debug.config
@@ -5342,6 +5342,11 @@ CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
 
 #
+# Overrided option: kernel tree git only
+#
+CONFIG_LOCALVERSION_AUTO=y
+
+#
 # Overrided options
 #
 CONFIG_EXPERT=y
