--- a/configs/kernel-3.10.0-x86_64-debug.config
+++ b/configs/kernel-3.10.0-x86_64-debug.config
@@ -6645,6 +6645,10 @@ CONFIG_FUSE_KIO_PCS=m
 
 CONFIG_FUSE_KIO_DEBUG=y
 
+CONFIG_BLK_WBT=y
+CONFIG_BLK_WBT_SQ=y
+CONFIG_BLK_WBT_MQ=y
+
 #
 # User resources
 #
