config.OpenVZ.minimal: Enable CONFIG_FUSE_KIO_PCS as build-in
Fixes: b1517a7192fe ("config.OpenVZ.minimal: Enable infiniband for
fast-path for vStorage")
Fixes: 573a50c973f9 ("config.minimal: Aling minimal config options for
RHEL8.3 based kernel")
To_merge: dccc0728cd14 ("fuse: Switch unused engines off in Kconfig")

Signed-off-by: Konstantin Khorenko <khorenko@virtuozzo.com>

--- a/configs/kernel-4.18.0-x86_64-KVM-minimal.config
+++ b/configs/kernel-4.18.0-x86_64-KVM-minimal.config
@@ -4129,7 +4129,7 @@ CONFIG_CUSE=y
 # CONFIG_VIRTIO_FS is not set
 # CONFIG_FUSE_KIO_NOOP is not set
 # CONFIG_FUSE_KIO_NULLIO is not set
-# CONFIG_FUSE_KIO_PCS is not set
+CONFIG_FUSE_KIO_PCS=y
 CONFIG_OVERLAY_FS=y
 # CONFIG_OVERLAY_FS_REDIRECT_DIR is not set
 CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW=y
